--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,8 +1,17 @@
-html, body {
+html,
+body {
   height: 100%;
 }
 
 body {
   font-family: sans-serif;
   margin: 0;
+
+  & > * {
+    height: 100%;
+  }
+
+  & > * > * {
+    height: 100%;
+  }
 }
